--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ input:invalid, textarea:invalid { border-radius: 1px;  -moz-box-shadow: 0px 0px 
 
 ::-moz-selection{ background: #000000; color:#fff; text-shadow: none; }
 ::selection { background: #000000; color:#fff; text-shadow: none; }
-a:link { -webkit-tap-highlight-color: #c0ffc0; }
+a:link { -webkit-tap-highlight-color: transparent; }
 
 button {  width: auto; overflow: visible; }
 .ie7 img { -ms-interpolation-mode: bicubic; }
@@ -88,12 +88,11 @@ button {  width: auto; overflow: visible; }
 
  
 @font-face {
-  font-family: 'MarkerFelt';
-  src: url('../fonts/markerfelt.eot') format('eot'),
-       url('../fonts/markerfelt.woff') format('woff'),
-       url('../fonts/markerfelt.ttf') format('truetype'),
-	   url('../fonts/markerfelt.otf') format('opentype'),
-       url('../fonts/markerfelt.svg') format('svg');
+  font-family: 'KomikaText';
+  src: url('../fonts/KomikaDb.eot') format('eot'),
+       url('../fonts/KomikaDb.woff') format('woff'),
+       url('../fonts/KomikaDb.ttf') format('truetype'),
+       url('../fonts/KomikaDb.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -101,7 +100,7 @@ button {  width: auto; overflow: visible; }
 body
 {
   background-color: #000000;
-  font-family:MarkerFelt, Comic Sans, Helvetica, Arial;
+  font-family: KomikaText, Comic Sans, Helvetica, Arial;
 
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -110,12 +109,26 @@ body
 
 div#content
 {
+  transition: all 600ms;
+  -webkit-transition: all 600ms;
+  -moz-transition: all 600ms;
+  -o-transition: all 600ms;
+  -ms-transition: all 600ms;
+  
+  border: 1px solid #ccc;
+
   position: absolute;
   overflow: hidden;
 
   -moz-box-shadow: 0px 0px 8px #ccc;
   -webkit-box-shadow: 0px 0px 8px #ccc;
   box-shadow: 0px 0px 8px #ccc;
+  
+  left: 50%;
+  top: 50%;
+  
+  margin-left: -230px;
+  margin-top: -160px;
 
   width: 460px;
   height: 320px;
@@ -136,19 +149,116 @@ div.gameState
 
   position: absolute;
 
-  top: 25px;
-
-  width: 460px;
+  top: 12px;
 
   z-index: 1;
+}
+
+#btnLowQuality
+{
+  background-image: url(../img/icon_ghost_low.png);
+  
+  right: 70px;
+}
+
+#btnHighQuality
+{
+  background-image: url(../img/icon_ghost.png);
+
+  right: 12px;
+}
+
+#mouseover_box
+{
+	transition: all 600ms;
+	-webkit-transition: all 600ms;
+	-moz-transition: all 600ms;
+	-o-transition: all 600ms;
+	-ms-transition: all 600ms;
+
+	position: absolute;
+	
+	border: 1px solid #fff;
+	background-color: #000;
+	
+	right: 12px;
+	bottom: 8px;
+	
+	padding-left: 2px;
+	padding-right: 2px;
+	padding-bottom: 2px;
+	padding-top: 0px;
+	
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	
+	-moz-box-shadow: 0px 0px 8px #eee;
+	-webkit-box-shadow: 0px 0px 8px #eee;
+	box-shadow: 0px 0px 8px #eee;
+	
+	width: 100px;
+	height: 20px;
+}
+
+#mouseover_text
+{
+  font-size: 16px;
+}
+
+#btnScale
+{
+	position: absolute;
+	bottom: -56px;
+	left: 12px;
+}
+
+.buttonQuality
+{
+  transition: all 600ms;
+  -webkit-transition: all 600ms;
+  -moz-transition: all 600ms;
+  -o-transition: all 600ms;
+  -ms-transition: all 600ms;
+
+  background-repeat: no-repeat;
+  background-position: 6px 6px;
+  
+  position: absolute;
+  bottom: -48px;
+  cursor: pointer;
+  
+  border: 1px solid #fff;
+  background-color: #000;
+  
+  padding: 6px;
+  
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  
+  -moz-box-shadow: 0px 0px 8px #eee;
+  -webkit-box-shadow: 0px 0px 8px #eee;
+  box-shadow: 0px 0px 8px #eee;
+
+  width: 32px;
+  height: 32px;
+}
+
+.buttonQuality:hover
+{
+  border: 1px solid #ccc;
+  
+  background-color: #444;
+  
+  -moz-box-shadow: 0px 0px 4px #eee;
+  -webkit-box-shadow: 0px 0px 4px #eee;
+  box-shadow: 0px 0px 4px #eee;
 }
 
 div#loading
 {
   top: 0px;
-
-  width: 460px;
-  height: 320px;
 
   background-color: #fff;
 
@@ -156,6 +266,40 @@ div#loading
   -moz-opacity:0.9;
   -khtml-opacity:0.9;
   opacity:0.9;
+}
+
+div#btnAchUp
+{
+	background: url(../img/btnAchUp.png);
+	
+	position: absolute;
+	
+	left: 50%;
+	top: 80px;
+	
+	margin-left: -100px;
+	
+	width: 200px;
+	height: 20px;
+	
+	z-index: 10;
+}
+
+div#btnAchDown
+{
+	background: url(../img/btnAchDown.png);
+	
+	position: absolute;
+	
+	left: 50%;
+	top: 225px;
+	
+	margin-left: -100px;
+	
+	width: 200px;
+	height: 20px;
+	
+	z-index: 10;
 }
 
 div#game
@@ -169,9 +313,6 @@ div#mouserect
 
   cursor: crosshair;
 
-  width: 460px;
-  height: 320px;
-
   z-index: 5;
 }
 
@@ -180,36 +321,137 @@ div.blackrect
   background: #000000;
 
   position: absolute;
-  filter:alpha(opacity=75);
-  -moz-opacity:0.75;
-  -khtml-opacity:0.75;
-  opacity:0.75;
+
+  top: 0px;
+  left: 0px;
 
   z-index: 3;
 }
 
-div#left.blackrect
+div#achievement_box
 {
-  left: 0px;
+	background-color: #000;
+	background-image: url(../img/trophy.png);
+	background-size: 50px;
 
-  height: 320px;
+    background-repeat: no-repeat;
+    background-position: 6px 6px;
+
+	position: absolute;
+	
+	left: 80px;
+	bottom: -80px;
+	
+	width: 240px;
+	height: 50px;
+	
+	padding-left: 60px;
+	padding-bottom: 8px;
+	padding-right: 12px;
+	padding-top: 8px;
+	
+	z-index: 20;
+	
+	border: 1px solid #fff;
+	background-color: #000;
+	
+	border-radius: 18px;
+	-moz-border-radius: 18px;
+	-webkit-border-radius: 18px;
+	
+	-moz-box-shadow: 0px 0px 8px #eee;
+	-webkit-box-shadow: 0px 0px 8px #eee;
+	box-shadow: 0px 0px 8px #eee;
 }
 
-div#right.blackrect
+.ach_box
 {
-  height: 320px;
+	background-image: url(../img/trophy.png);
+	background-size: 50px;
+	
+    background-repeat: no-repeat;
+    background-position: 6px 6px;
+	
+	padding-left: 60px;
+	padding-bottom: 8px;
+	padding-right: 12px;
+	padding-top: 8px;
+	
+	border: 1px solid #fff;
+	background-color: #000;
+	
+	border-radius: 18px;
+	-moz-border-radius: 18px;
+	-webkit-border-radius: 18px;
+	
+	-moz-box-shadow: 0px 0px 8px #eee;
+	-webkit-box-shadow: 0px 0px 8px #eee;
+	box-shadow: 0px 0px 8px #eee;
 }
 
-div#top.blackrect
+.locked
 {
-  top: 0px;
-
-  width: 256px;
+	background-color: #333 !important;
+	
+	opacity: 0.6;
+	-webkit-opacity: 0.6;
+	-moz-opacity: 0.6;
 }
 
-div#bottom.blackrect
+.unlocked
 {
-  width: 256px;
+	background-color: #666 !important;
+	
+	opacity: 1.0;
+	-webkit-opacity: 1.0;
+	-moz-opacity: 1.0;
+}
+
+#ach_title
+{
+	color: #c0ffc0;
+	text-shadow: 0px 0px 24px #eee;
+}
+
+#ach_list
+{
+	height: 120px;
+	text-align: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	overflow: hidden;
+}
+
+.ach_locked
+{
+	color: #333;
+	text-shadow: 0px 0px 4px #ccc;
+}
+
+.ach_unlocked
+{
+	color: #c0ffc0;
+	text-shadow: 0px 0px 24px #eee;
+}
+
+.ach_details
+{
+	color: #111;
+	text-shadow: 0px 0px 4px #ccc;
+}
+
+.lowQuality
+{
+	border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    -webkit-border-radius: 0px !important;
+
+    -moz-box-shadow: 0px 0px 0px #eee !important;
+    -webkit-box-shadow: 0px 0px 0px #eee !important;
+    box-shadow: 0px 0px 0px #eee !important;
+    
+    text-shadow: 0px 0px 0px #000 !important;
+    -webkit-mask-image: none !important;
 }
 
 div.overlay
@@ -241,8 +483,6 @@ div.overlay
   -moz-box-shadow: 0px 0px 8px #eee;
   -webkit-box-shadow: 0px 0px 8px #eee;
   box-shadow: 0px 0px 8px #eee;
-
-  behavior: url(ie-css3.htc);
 
   z-index: 10;
 }
@@ -294,39 +534,25 @@ span
 {
   cursor: default;
 
-  font-size: 18px;
+  font-size: 17px;
   color: #40ff40;
 
   text-shadow: 1px 1px 4px #000000;
-
-  behavior: url(ie-css3.htc);
 }
 
 span#title
 {
-  transition: text-shadow 600ms;
-  -webkit-transition: text-shadow 600ms;
-  -moz-transition: text-shadow 600ms;
-  -o-transition: text-shadow 600ms;
-  -ms-transition: text-shadow 600ms;
-
-  font-size: 44px;
+  font-size: 42px;
   color: #40ff40;
-  text-shadow: 0 0 60px #000000;
-
-  behavior: url(ie-css3.htc);
-}
-
-span#title:hover
-{
-  text-shadow: -16px 16px 40px #000;
-
-  behavior: url(ie-css3.htc);
+  text-shadow: 0 0 5px #000000;
+  
+  -webkit-mask-image: -webkit-gradient(linear, left top, 
+      left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.25)));
 }
 
 span.button
 {
-  font-size: 28px;
+  font-size: 32px;
 }
 
 span a,
@@ -342,8 +568,6 @@ span.button a
 
   text-shadow: 2px 2px 8px #000000;
   text-decoration: none;
-
-  behavior: url(ie-css3.htc);
 }
 
 span.button:hover,
@@ -351,9 +575,7 @@ span.button a:hover,
 span a:hover
 {
   color: #c0ffc0;
-  text-shadow: 0px 0px 16px #eee;
-
-  behavior: url(ie-css3.htc);
+  text-shadow: 0px 0px 24px #eee;
 }
 
 span.button:active,
